Started Payment integration

--- a/index.html
+++ b/index.html
@@ -16,15 +16,8 @@
     <!-- Load fonts style after rendering the layout styles -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;200;300;400;500;700;900&display=swap">
     <link rel="stylesheet" href="assets/css/fontawesome.min.css">
-<!--
-    
-TemplateMo 559 Zay Shop
-
-https://templatemo.com/tm-559-zay-shop
-
--->
 </head>
-
+    
 <body>
     <!-- Start Top Nav -->
     <nav class="navbar navbar-expand-lg bg-dark navbar-light d-none d-lg-block" id="templatemo_nav_top">
@@ -32,12 +25,12 @@ https://templatemo.com/tm-559-zay-shop
             <div class="w-100 d-flex justify-content-between">
                 <div>
                     <i class="fa fa-envelope mx-2"></i>
-                    <a class="navbar-sm-brand text-light text-decoration-none" href="mailto:kobbyj099@gmail.com">info@jones.com</a>
+                    <a class="navbar-sm-brand text-light text-decoration-none" href="mailto:kobbyj099@gmail.com">info@shopease.com</a>
                     <i class="fa fa-phone mx-2"></i>
                     <a class="navbar-sm-brand text-light text-decoration-none" href="tel:+233598738535">+233598738535</a>
                 </div>
                 <div>
-                    <a class="text-light" href="https://fb.com/templatemo" target="_blank" rel="sponsored"><i class="fab fa-facebook-f fa-sm fa-fw me-2"></i></a>
+                    <a class="text-light" href="https://facebook.com" target="_blank" rel="sponsored"><i class="fab fa-facebook-f fa-sm fa-fw me-2"></i></a>
                     <a class="text-light" href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram fa-sm fa-fw me-2"></i></a>
                     <a class="text-light" href="https://twitter.com/" target="_blank"><i class="fab fa-twitter fa-sm fa-fw me-2"></i></a>
                     <a class="text-light" href="https://www.linkedin.com/" target="_blank"><i class="fab fa-linkedin fa-sm fa-fw"></i></a>
@@ -52,8 +45,8 @@ https://templatemo.com/tm-559-zay-shop
     <nav class="navbar navbar-expand-lg navbar-light shadow">
         <div class="container d-flex justify-content-between align-items-center">
 
-            <a class="navbar-brand text-info logo h1 align-self-center" href="index.html">
-                Jones
+            <a class="navbar-brand text-default logo h1 align-self-center" href="index.html">
+                ShopEase
             </a>
 
             <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#templatemo_main_nav" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -86,7 +79,7 @@ https://templatemo.com/tm-559-zay-shop
                             </div>
                         </div>
                     </div>
-                    <a class="nav-icon d-none d-lg-inline" href="#" data-bs-toggle="modal" data-bs-target="#templatemo_search">
+                    <a class="nav-icon d-none d-lg-inline" href="#" data-bs-toggle="modal" data-bs-target="#ShopEase_search">
                         <i class="fa fa-fw fa-search text-dark mr-2"></i>
                     </a>
                     <a class="nav-icon position-relative text-decoration-none" href="#">
@@ -105,7 +98,7 @@ https://templatemo.com/tm-559-zay-shop
     <!-- Close Header -->
 
     <!-- Modal -->
-    <div class="modal fade bg-white" id="templatemo_search" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade bg-white" id="ShopEase_search" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-lg" role="document">
             <div class="w-100 pt-1 mb-5 text-right">
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -139,7 +132,7 @@ https://templatemo.com/tm-559-zay-shop
                         </div>
                         <div class="col-lg-6 mb-0 d-flex align-items-center">
                             <div class="text-align-left align-self-center">
-                                <h1 class="h1 text-info"><b>Jones</b> eCommerce</h1>
+                                <h1 class="h1 text-default"><b>ShopEase</b> eCommerce</h1>
                                 <h3 class="h2">Tiny and Perfect eCommerce Site</h3>
                                 <p>
                                     Shopping just got better with our online store! Say goodbye to long lines, crowded stores, and limited inventory. Our website is your one-stop-shop for everything you need, from top brands and high-quality products to unbeatable deals and promotions. Plus, with our user-friendly interface and secure checkout process, you can shop with confidence and convenience. Join our community of satisfied customers today!
@@ -157,7 +150,7 @@ https://templatemo.com/tm-559-zay-shop
                         </div>
                         <div class="col-lg-6 mb-0 d-flex align-items-center">
                             <div class="text-align-left">
-                                <h1 class="h1 text-info">Jones eCommerce</h1>
+                                <h1 class="h1 text-default">ShopEase eCommerce</h1>
                                 <h3 class="h2">Welcome to our virtual storefront</h3>
                                 <p>
                                     Experience the future of shopping with our online store. We believe that shopping should be fun, effortless, and personalized to your needs. That's why we've created a platform that combines cutting-edge technology with human expertise to offer you the best of both worlds. From product recommendations based on your preferences to easy returns and refunds, we've got you covered. Explore our store and discover a new way to shop.
@@ -175,7 +168,7 @@ https://templatemo.com/tm-559-zay-shop
                         </div>
                         <div class="col-lg-6 mb-0 d-flex align-items-center">
                             <div class="text-align-left">
-                                <h1 class="h1 text-info">Jones eCommerce</h1>
+                                <h1 class="h1 text-default">Jones eCommerce</h1>
                                 <h3 class="h2">Your satisfaction is our top priority </h3>
                                 <p>
                                     Welcome to our online store! We're thrilled to have you here. Whether you're looking for the latest tech gadgets, trendy fashion accessories, or home decor, you've come to the right place. Our wide selection of products, competitive prices, and fast shipping make shopping with us easy and enjoyable. Browse our categories, find what you need, and let us take care of the rest.
@@ -186,8 +179,8 @@ https://templatemo.com/tm-559-zay-shop
                 </div>
             </div>
         </div>
-        <a class="carousel-control-prev text-decoration-none w-auto ps-3" href="#template-mo-zay-hero-carousel" role="button" data-bs-slide="prev">
-            <i class="fas fa-chevron-left"></i>
+        <a class="carousel-control-prev  text-decoration-none w-auto ps-3" href="#template-mo-zay-hero-carousel" role="button" data-bs-slide="prev">
+            <i class="fas fa-chevron-left text-default"></i>
         </a>
         <a class="carousel-control-next text-decoration-none w-auto pe-3" href="#template-mo-zay-hero-carousel" role="button" data-bs-slide="next">
             <i class="fas fa-chevron-right"></i>
@@ -200,7 +193,7 @@ https://templatemo.com/tm-559-zay-shop
     <section class="container py-5">
         <div class="row text-center pt-3">
             <div class="col-lg-6 m-auto">
-                <h1 class="text-info fw-bolder">Categories of The Month</h1>
+                <h1 class="text-default fw-bolder">Categories of The Month</h1>
                 <p>
                     Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
                     deserunt mollit anim id est laborum.
@@ -252,9 +245,9 @@ https://templatemo.com/tm-559-zay-shop
                         <div class="card-body">
                             <ul class="list-unstyled d-flex justify-content-between">
                                 <li>
-                                    <i class="text-warning fa fa-star"></i>
-                                    <i class="text-warning fa fa-star"></i>
-                                    <i class="text-warning fa fa-star"></i>
+                                    <i class="text-default fa fa-star"></i>
+                                    <i class="text-default fa fa-star"></i>
+                                    <i class="text-default fa fa-star"></i>
                                     <i class="text-muted fa fa-star"></i>
                                     <i class="text-muted fa fa-star"></i>
                                 </li>
@@ -276,9 +269,9 @@ https://templatemo.com/tm-559-zay-shop
                         <div class="card-body">
                             <ul class="list-unstyled d-flex justify-content-between">
                                 <li>
-                                    <i class="text-warning fa fa-star"></i>
-                                    <i class="text-warning fa fa-star"></i>
-                                    <i class="text-warning fa fa-star"></i>
+                                    <i class="text-default fa fa-star"></i>
+                                    <i class="text-default fa fa-star"></i>
+                                    <i class="text-default fa fa-star"></i>
                                     <i class="text-muted fa fa-star"></i>
                                     <i class="text-muted fa fa-star"></i>
                                 </li>
@@ -300,11 +293,11 @@ https://templatemo.com/tm-559-zay-shop
                         <div class="card-body">
                             <ul class="list-unstyled d-flex justify-content-between">
                                 <li>
-                                    <i class="text-warning fa fa-star"></i>
-                                    <i class="text-warning fa fa-star"></i>
-                                    <i class="text-warning fa fa-star"></i>
-                                    <i class="text-warning fa fa-star"></i>
-                                    <i class="text-warning fa fa-star"></i>
+                                    <i class="text-default fa fa-star"></i>
+                                    <i class="text-default fa fa-star"></i>
+                                    <i class="text-default fa fa-star"></i>
+                                    <i class="text-default fa fa-star"></i>
+                                    <i class="text-default fa fa-star"></i>
                                 </li>
                                 <li class="text-muted text-right">$360.00</li>
                             </ul>
@@ -329,7 +322,7 @@ https://templatemo.com/tm-559-zay-shop
             <div class="row">
 
                 <div class="col-md-4 pt-5">
-                    <h2 class="h2 text-info border-bottom pb-3 border-light logo">Jones Shop</h2>
+                    <h2 class="h2 text-default border-bottom pb-3 border-light logo">Jones Shop</h2>
                     <ul class="list-unstyled text-light footer-link-list">
                         <li>
                             <i class="fas fa-map-marker-alt fa-fw"></i>
