--- a/shop-single.html
+++ b/shop-single.html
@@ -258,13 +258,12 @@
 
                             <h6>Specification:</h6>
                             <ul class="list-unstyled pb-3">
-                                <li>Lorem ipsum dolor sit</li>
-                                <li>Amet, consectetur</li>
-                                <li>Adipiscing elit,set</li>
-                                <li>Duis aute irure</li>
-                                <li>Ut enim ad minim</li>
-                                <li>Dolore magna aliqua</li>
-                                <li>Excepteur sint</li>
+                                <li class="availability-status">Availability Status: </li>
+                                <li class="return-policy">Return Policy: </li>
+                                <li class="shipping-info">Shipping Info: </li>
+                                <li class="waranty-info">Waranty Info: </li>
+                                <li class="weight">Weight: </li>
+                                <li class="discount-percent">Discount Percentage: </li>
                             </ul>
 
                             <form action="" method="GET">
