--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                         </div>
                         <div class="col-lg-6 mb-0 d-flex align-items-center">
                             <div class="text-align-left">
-                                <h1 class="h1 text-default">Jones eCommerce</h1>
+                                <h1 class="h1 text-default">ShopEase eCommerce</h1>
                                 <h3 class="h2">Your satisfaction is our top priority </h3>
                                 <p>
                                     Welcome to our online store! We're thrilled to have you here. Whether you're looking for the latest tech gadgets, trendy fashion accessories, or home decor, you've come to the right place. Our wide selection of products, competitive prices, and fast shipping make shopping with us easy and enjoyable. Browse our categories, find what you need, and let us take care of the rest.
