Updated the brand

--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
             <div class="row">
 
                 <div class="col-md-4 pt-5">
-                    <h2 class="h2 text-default border-bottom pb-3 border-light logo">Jones Shop</h2>
+                    <h2 class="h2 text-default border-bottom pb-3 border-light logo">ShopEase</h2>
                     <ul class="list-unstyled text-light footer-link-list">
                         <li>
                             <i class="fas fa-map-marker-alt fa-fw"></i>
@@ -335,7 +335,7 @@
                         </li>
                         <li>
                             <i class="fa fa-envelope fa-fw"></i>
-                            <a class="text-decoration-none" href="mailto:kobbyj099@gmail.com">info@jones.com</a>
+                            <a class="text-decoration-none" href="mailto:kobbyj099@gmail.com">info@shopease.com</a>
                         </li>
                     </ul>
                 </div>
@@ -401,7 +401,7 @@
                 <div class="row pt-2">
                     <div class="col-12">
                         <p class="text-left text-light">
-                            Copyright &copy; 2023 Jones Shop 
+                            Copyright &copy; 2023 ShopEase 
                             | Designed by <a rel="sponsored" href="https://github.com/Kobby-Jones" target="_blank">Kobby Jones</a>
                         </p>
                     </div>
