Testing Jenkins pipeline after disk resize

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                             </ul>
                             <a href="shop-single.html" class="h2 text-decoration-none text-dark">Cloud Nike Shoes</a>
                             <p class="card-text">
-                                Aenean gravida dignissim finibus. Nullam ipsum diam, posuere vitae pharetra sed, commodo ullamcorper.
+                                Aenean gravida dignissim finibus. Nullam ipsum diam, posuere lorri vitae pharetra sed, commodo ullamcorper.
                             </p>
                             <p class="text-muted">Reviews (48)</p>
                         </div>
