--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                             <a class="nav-link" href="contact.html">Contact</a>
                         </li>
                         <li class="nav-item">
-                            <a rel="noopener" class="nav-link" target="_blank" href="admin_index.html">Admin</a>
+                            <a rel="noopener" class="nav-link" target="_blank" href="admin_index.html">Admin Dashboard</a>
                         </li>
                     </ul>
                 </div>
