--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                             <a class="nav-link" href="shop.html">Shop</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="contact.html">Contact</a>
+                            <a class="nav-link" href="contact.html">Contact Us</a>
                         </li>
                         <li class="nav-item">
                             <a rel="noopener" class="nav-link" target="_blank" href="admin_index.html">Admin Dashboard</a>
