changed to collins

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
               </div>
               <div class="col-lg-6 mb-0 d-flex align-items-center">
                 <div class="text-align-left align-self-center">
-                  <h1 class="h1 text-default"><b>Jones</b> eCommerce</h1>
+                  <h1 class="h1 text-default"><b>Collins</b> eCommerce</h1>
                   <h3 class="h2">Tiny and Perfect eCommerce Site</h3>
                   <p>
                     Shopping just got better with our online store! Say goodbye
